tests/ui/fail/multiple-attr-on-field.stderr
error: only one #[substruct] attribute is allowed on a field
 --> tests/ui/fail/multiple-attr-on-field.rs:6:5
  |
6 |     #[substruct(C)]
  |     ^^^^^^^^^^^^^^^
